# natto_library

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  _codeql_detected_source_root  colcon_build.sh  index.html  mkdocs.yaml  sitemap.xml
.github/workflows/: autofix.yaml  autofix_build.yaml  autofix_build_main.yaml  autofix_build_pr.yaml  build_test.yaml  docker_build.yaml  mkdocs.yaml
common/natto_canable/: index.html
common/natto_map/: index.html
control/natto_holonomic_pure_pursuit/: index.html
control/natto_swerve_calculator/: index.html
develop/: index.html
docs/: .pages  develop.md  index.md  mkdocs_test.md  template.md
docs/behavior/: natto_state_machine.md
docs/common/: natto_canable.md  natto_command_selector.md  natto_joint_state.md  natto_joy.md  (+1 more)
map_builder/: AGENTS.md  index.html  package-lock.json  package.json
search/: search_index.json
src/: src_test.md
src/behavior/natto_state_machine/: CMakeLists.txt  package.xml
src/behavior/natto_state_machine/include/natto_state_machine/: default_action.hpp  mermaid_loader.hpp  mermaid_state_machine.hpp  state_machine.hpp
src/behavior/natto_state_machine/src/: default_action.cpp  mermaid_loader.cpp  mermaid_state_machine.cpp  state_machine.cpp
src/common/natto_canable/: CMakeLists.txt  package.xml
src/common/natto_canable/include/natto_canable/: canable.hpp
src/common/natto_canable/src/: canable.cpp
src/common/natto_command_selector/: CMakeLists.txt  package.xml
src/common/natto_command_selector/include/natto_command_selector/: twist_selector.hpp
src/common/natto_command_selector/src/: twist_selector.cpp
src/common/natto_map/: CMakeLists.txt  package.xml
src/common/natto_map/include/natto_map/: map_converter.hpp  map_loader.hpp
src/common/natto_map/src/: map_converter.cpp  map_loader.cpp
src/control/natto_chassis_calculator/: CMakeLists.txt  package.xml
src/control/natto_chassis_calculator/include/natto_chassis_calculator/: chassis_calculator.hpp  mecanum_calculator.hpp  omni_calculator.hpp  swerve_calculator.hpp  two_wheel_calculator.hpp
src/control/natto_chassis_calculator/src/: chassis_calculator.cpp  mecanum_calculator.cpp  omni_calculator.cpp  swerve_calculator.cpp  two_wheel_calculator.cpp
src/control/natto_speed_path_controller/: CMakeLists.txt  package.xml
src/control/natto_speed_path_controller/include/natto_speed_path_controller/: speed_path_controller.hpp
src/control/natto_speed_path_controller/src/: speed_path_controller.cpp
src/localization/natto_mcl/: CMakeLists.txt  package.xml
src/localization/natto_mcl/include/natto_mcl/: mcl.hpp
src/localization/natto_mcl/src/: mcl.cpp
src/localization/natto_wheel_odometry/: CMakeLists.txt  package.xml
src/localization/natto_wheel_odometry/include/natto_wheel_odometry/: mecanum_odometry.hpp  omni_odometry.hpp  swerve_odometry.hpp  two_wheel_odometry.hpp  wheel_odometry.hpp
src/localization/natto_wheel_odometry/src/: mecanum_odometry.cpp  omni_odometry.cpp  swerve_odometry.cpp  two_wheel_odometry.cpp  wheel_odometry.cpp
src/message/natto_msgs/: CMakeLists.txt  package.xml
src/message/natto_msgs/msg/: Can.msg  Circle.msg  CircleArray.msg  Corner.msg  CornerArray.msg  Line.msg  LineArray.msg  LineSegmentArray.msg  Map.msg  Mecanum.msg  SpeedPath.msg  State.msg  StateAction.msg  StateGraph.msg  StateResult.msg  StateTransition.msg  Swerve.msg  TwoWheel.msg
src/planning/natto_astar_planner/: CMakeLists.txt  package.xml
src/planning/natto_astar_planner/include/natto_astar_planner/: astar_planner.hpp
src/planning/natto_astar_planner/src/: astar_planner.cpp
src/planning/natto_speed_path/: CMakeLists.txt  package.xml
src/planning/natto_speed_path/include/natto_speed_path/: nlp_planner.hpp  speed_path_loader.hpp
src/planning/natto_speed_path/src/: speed_path_loader.cpp
src/sensing/natto_laser_filter/: CMakeLists.txt  package.xml
src/sensing/natto_laser_filter/include/natto_laser_filter/: laser_filter.hpp
src/sensing/natto_laser_filter/src/: laser_filter.cpp
src/sensing/natto_lidar_converter/: CMakeLists.txt  package.xml
src/sensing/natto_lidar_converter/include/natto_lidar_converter/: laserscan_to_pointcloud2.hpp  pointcloud2_to_laserscan.hpp
src/sensing/natto_lidar_converter/src/: laserscan_to_pointcloud2.cpp  pointcloud2_to_laserscan.cpp
src/sensing/natto_lidar_merger/: CMakeLists.txt  package.xml
src/sensing/natto_lidar_merger/include/natto_lidar_merger/: pointcloud2_merger.hpp
src/sensing/natto_lidar_merger/src/: pointcloud2_merger.cpp
src/sensing/natto_ransac/: CMakeLists.txt  package.xml
src/sensing/natto_ransac/include/natto_ransac/: line_detector.hpp
src/sensing/natto_ransac/src/: line_detector.cpp
src/simulation/natto_simple_simulation/: CMakeLists.txt  package.xml
src/simulation/natto_simple_simulation/include/natto_simple_simulation/: imu_simulator.hpp  joint_state_simulator.hpp  lidar_simulator.hpp  mecanum_simulator.hpp  omni_simulator.hpp  simulate_swerve.hpp  swerve_simulator.hpp  two_wheel_simulator.hpp
src/simulation/natto_simple_simulation/src/: imu_simulator.cpp  joint_state_simulator.cpp  lidar_simulator.cpp  mecanum_simulator.cpp  omni_simulator.cpp  simulate_swerve.cpp  swerve_simulator.cpp  two_wheel_simulator.cpp
src/visualization/natto_visualization_converter/: CMakeLists.txt  package.xml
src/visualization/natto_visualization_converter/include/natto_visualization_converter/: area_visualizer.hpp  corners_visualizer.hpp  footprint_publisher.hpp  line_segments_visualizer.hpp  line_visualizer.hpp  lines_visualizer.hpp  map_visualizer.hpp  omni_visualizer.hpp  speed_path_visualizer.hpp  stl_visualizer.hpp  swerve_visualizer.hpp  visualize_map.hpp  visualize_swerve.hpp
src/visualization/natto_visualization_converter/src/: area_visualizer.cpp  corners_visualizer.cpp  footprint_publisher.cpp  line_segments_visualizer.cpp  line_visualizer.cpp  lines_visualizer.cpp  map_visualizer.cpp  omni_visualizer.cpp  speed_path_visualizer.cpp  stl_visualizer.cpp  swerve_visualizer.cpp  visualize_map.cpp  visualize_swerve.cpp
template/: index.html
(+136 files in other folders)
